test/Fail/Issue7146.err
Issue7146.agda:22.3-23.31: error: [NotSupported]
Not supported: open public in hard compile-time mode (for instance
in erased modules)
when checking the module application
module M (@♭ A) (@lock l) (_ : Foo A l) {@ω B = C : Set}
         {D : C → Set} {p @ (u , v) : Σ C D}
  = Agda.Builtin.Bool
